scrollbar fix (hopefully)

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ body {
   inset: 0;
   display: flex;
   align-items: center;
-  overflow-y: auto;
+  /* justify-content: center; */
   transition: opacity 1s;
   color: white;
 }
